fix border visibility on selected color

--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -150,7 +150,7 @@ h1 {
 
     &.active,
     &:hover {
-        border: 3px solid #2a2a2a;
+        border: 3px solid #acacac;
     }
 }
 
